@@ -1,4 +1,9 @@
-from normcap.screenshot.main import Handler, capture, get_available_handlers
+from normcap.screenshot.main import (
+    Handler,
+    capture,
+    capture_with_handler,
+    get_available_handlers,
+)
 from normcap.screenshot.permissions import (
     dbus_portal_show_request_permission_dialog,
     has_screenshot_permission,
@@ -10,6 +15,7 @@ from normcap.screenshot.permissions import (
 __all__ = [
     "Handler",
     "capture",
+    "capture_with_handler",
     "dbus_portal_show_request_permission_dialog",
     "get_available_handlers",
     "has_screenshot_permission",
