@@ -2,7 +2,7 @@ import logging
 
 from PySide6 import QtGui
 
-from normcap.screenshot.handlers import dbus_portal, grim, qt
+from normcap.screenshot.handlers import dbus_portal, gnome_screenshot, grim, qt
 from normcap.screenshot.models import Handler, HandlerProtocol
 
 logger = logging.getLogger(__name__)
@@ -10,8 +10,9 @@ logger = logging.getLogger(__name__)
 
 _capture_handlers: dict[Handler, HandlerProtocol] = {
     Handler.QT: qt,
-    Handler.DBUS_PORTAL: dbus_portal,
+    Handler.GNOME_SCREENSHOT: gnome_screenshot,
     Handler.GRIM: grim,
+    Handler.DBUS_PORTAL: dbus_portal,
 }
 
 
